fdo#78882: DOCX: File gets corrupt after Roundtrip

Issue :
	- Document contains a Section break(Next Page) with a drawing.
	- Section break is manullay adjusted before the drawing.
	  Hence in original document.xml it wsectPr comes as
	  a part of w:pPr of paragraph.
	- But in RT in document.xml, section break is written
	  by adding a dummy paragraph.
	- This is because <w:drawing> also contains a paragraph
	  and hence when encounters section property LO creates
	  a dummy paragraph and writes it in between runs.
	- This was causing the corruption.

	Implementation :
	- Added a member varaible m_bDMLAndVMLDrawingOpen.
	- It is set to true when it writes drawing.
	- It's value is checked in DocxAttributeOutput::EndParagraph()
	  If m_bDMLAndVMLDrawingOpen is true Do Not make
	  m_bParagraphOpened to false, as one more paragraph is still
	  open.
	- This will postpone the writing od Section property and will
	  be written inside w:pPr and no dummy paragraph will get
	  created.
	- Added Export Unit test case.

Change-Id: Ifa26fcaf8f02e62d020339670c8ba58ba92d9f40
Reviewed-on: https://gerrit.libreoffice.org/9430
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>